[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dwarf/dwarf_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Dwarf/Dwarf.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.5
height = 3.0

[node name="Dwarf" type="RigidBody2D"]
mode = 2
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.5, -5 )
z_index = 5
frames = ExtResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="UpRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 2 )

[node name="DownRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, -0.5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="LeftRaycast" type="RayCast2D" parent="."]
position = Vector2( -2, -4 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 1 )

[node name="RightRaycast" type="RayCast2D" parent="."]
position = Vector2( 2, -4 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 1 )
